<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ハイパーイコライザー</string>

    <string name="tab_videos">動画</string>
    <string name="tab_music">音楽</string>
    <string name="tab_playlists">プレイリスト</string>
    <string name="tab_favorites">お気に入り</string>

    <string name="action_new_playlist">新規プレイリスト</string>
    <string name="action_delete">削除</string>
    <string name="action_rename">名称変更</string>
    <string name="action_add_to_playlist">プレイリストに追加</string>
    <string name="action_add_to_favorites">お気に入りに追加</string>
    <string name="action_remove_from_favorites">お気に入りから削除</string>
    <string name="action_shuffle">シャッフル再生</string>
    <string name="action_extract_audio">音声を抽出して保存</string>
    <string name="action_repeat">リピート</string>
    <string name="action_edit">編集する</string>
    <string name="action_equalizer">イコライザー</string>

    <string name="dialog_playlist_name_hint">プレイリスト名</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">キャンセル</string>

    <string name="permission_rationale_title">メディアへのアクセス許可</string>
    <string name="permission_rationale_message">端末内の動画・音楽ファイルを表示するには、メディアへのアクセスを許可してください。</string>
    <string name="permission_grant">許可する</string>

    <string name="empty_videos">動画が見つかりません</string>
    <string name="empty_music">音楽が見つかりません</string>
    <string name="empty_playlists">プレイリストがありません。右下の＋から作成できます。</string>
    <string name="empty_favorites">お気に入りに登録された項目はありません</string>

    <string name="aspect_fit">元の比率</string>
    <string name="aspect_fill">画面いっぱい</string>
    <string name="aspect_crop">切り取り拡大</string>
    <string name="aspect_original">元のサイズ(等倍)</string>

    <string name="loop_set_start">ループ開始点を設定</string>
    <string name="loop_set_end">ループ終了点を設定</string>
    <string name="loop_clear">ループ区間を解除</string>
    <string name="loop_enable">区間ループ ON</string>
    <string name="loop_disable">区間ループ OFF</string>
    <string name="loop_type_shuffle">シャッフル</string>
    <string name="loop_type_list">リストループ</string>
    <string name="loop_type_single">1ループ</string>
    <string name="loop_type_ab">区間ループ</string>
    <string name="loop_type_ab_short">AB</string>

    <string name="speed_label">再生速度 %1$.2fx</string>

    <string name="percent_format">%1$d%%</string>

    <string name="eq_title">イコライザー</string>
    <string name="eq_reset">リセット</string>
    <string name="eq_enable">イコライザーを有効にする</string>
    <string name="eq_bands_hint">各帯域のスライダーを上下させて音質を調整できます。右の数値はdB(デシベル)です。</string>
    <string name="eq_preset">プリセット</string>
    <string name="eq_vocal_volume">ボーカル音量</string>
    <string name="eq_instrumental_volume">伴奏(楽器)音量</string>
    <string name="eq_separation_title">ボーカル / 伴奏 個別音量</string>
    <string name="eq_separation_explainer">下のボタンで分離処理をすると、ボーカルと伴奏(楽器)の音量を別々に調整できるようになります。</string>
    <string name="eq_separate_now">この曲/動画をボーカル分離処理する</string>
    <string name="eq_separating">分離処理中… %1$d%%</string>
    <string name="eq_separation_done">分離処理が完了しました</string>
    <string name="eq_separation_fallback">学習済みモデル未配置のため、簡易センターチャンネル抽出モードで動作しています</string>
    <string name="eq_separation_failed">分離処理に失敗しました</string>
    <string name="eq_separation_timeout">処理がタイムアウトしました(端末の処理能力に対してファイルが大きすぎる可能性があります)</string>
    <string name="eq_separation_none">未処理: 下のボタンでボーカル/伴奏を分離できます</string>
    <string name="eq_bass_boost">重低音強調</string>

    <string name="playback_error_format">再生エラー: %1$s</string>

    <string name="editor_title">動画編集</string>
    <string name="editor_trim">トリミング</string>
    <string name="editor_split">分割</string>
    <string name="editor_concat">動画を結合</string>
    <string name="editor_copy">コピー</string>
    <string name="editor_paste">貼り付け</string>
    <string name="editor_mute_audio">音声を無効化</string>
    <string name="editor_export">書き出して保存</string>
    <string name="editor_exporting">書き出し中… %1$d%%</string>
    <string name="editor_export_done">書き出しが完了しました</string>
    <string name="editor_export_failed">書き出しに失敗しました: %1$s</string>
    <string name="editor_add_clip">クリップを追加</string>
    <string name="editor_remove_clip">クリップを削除</string>

    <string name="notif_channel_playback">再生コントロール</string>

    <string name="popup_permission_title">ポップアップ表示の許可が必要です</string>
    <string name="popup_permission_message">動画をポップアップ(他のアプリの上に重ねて表示)で再生するには、「他のアプリの上に重ねて表示」の権限が必要です。次の画面で許可をONにしてください。</string>
    <string name="action_popup">ポップアップ表示</string>

    <string name="view_mode_list">一覧</string>
    <string name="view_mode_folder">フォルダ別</string>
    <string name="folder_item_count">%1$d件</string>
    <string name="action_hide_folder">このフォルダを非表示にする</string>
    <string name="action_toggle_hidden">非表示にする</string>
    <string name="action_unhide">再表示する</string>
    <string name="action_manage_hidden">非表示の管理</string>
    <string name="hidden_files_header">非表示のファイル</string>
    <string name="hidden_folders_header">非表示のフォルダ</string>
    <string name="empty_hidden">非表示にした項目はありません</string>
    <string name="action_select_all">全選択</string>
    <string name="action_deselect_all">全解除</string>

    <string name="selection_count_format">%1$d件選択中</string>
    <string name="action_remove_from_playlist">プレイリストから削除</string>

    <string name="action_view_crash_log">クラッシュログを確認</string>
    <string name="crash_log_dialog_title">クラッシュログ</string>
    <string name="crash_log_copy">コピー</string>
    <string name="crash_log_copied">クラッシュログをコピーしました</string>
    <string name="crash_log_none">クラッシュログはありません</string>
</resources>
